tests/bad/deref_non_ptr.ae
/// fail: Expression must be a pointer-type

def main() {
    let x = 5
    let y = *x
}